# QuickSalesman

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/algorithms/: Algorithm.cpp  Algorithm.h  BruteForce.cpp  BruteForce.h
src/algorithms/benchmarks/: Benchmark.h
src/algorithms/tsp/: BranchAndBound.cpp  BranchAndBound.h  BruteForce.cpp  BruteForce.h  DynamicProgramming.cpp  DynamicProgramming.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  TabuSearch.cpp  TabuSearch.h  TspAlgorithm.cpp  TspAlgorithm.h  Utils.h
src/algorithms/tsp/tabuSearch/: RangeReverser.cpp  RangeReverser.h  TabuSearch.h  VertexSwapper.cpp  VertexSwapper.h
src/algorithms/tsp/utils/: CombinationsGenerator.cpp  CombinationsGenerator.h  PathMask.h
src/algorithms/utils/: CombinationsGenerator.cpp  CombinationsGenerator.h  GraphGenerator.cpp  GraphGenerator.h  PathMask.h
src/app/: App.cpp  App.h  BenchmarkManager.cpp  BenchmarkManager.h  ExactAlgorithmManager.cpp  ExactAlgorithmManager.h  HeuristicAlgorithmManager.cpp  HeuristicAlgorithmManager.h  TspManager.cpp  TspManager.h
src/parsers/: ProjectReader.cpp  ProjectReader.h  TspReader.h
src/utils/: Clock.cpp  Clock.h  ExtendedPriorityQueue.h  ExtendedStack.h  Print.h  Timer.h  Utils.cpp  Utils.h
src/utils/time/: BasicTimer.cpp  BasicTimer.h  CallbackTimer.h  StopWatch.cpp  StopWatch.h  Timer.h
test/: CMakeLists.txt
test/src/algorithms/tsp/: AlgorithmsTest.cpp  UtilsTest.cpp
test/src/algorithms/tsp/tabuSearch/: RangeReverserTest.cpp  VertexSwapperTest.cpp
